use keyframes to animate chat, avoids flickering

--- a/resources/assets/css/common/keyframes.less
+++ b/resources/assets/css/common/keyframes.less
@@ -161,3 +161,11 @@
   80%  { -webkit-transform: rotate3d(0,0,1,180deg) translate3d(  5%,0,0);}
   100% { -webkit-transform: rotate3d(0,0,1,180deg) translate3d(   0,0,0);}
 }
+@keyframes out-fade-right {
+  0%   { opacity: 1; transform: none;}
+  100% { opacity: 0; transform: translate3d(100%, 0, 0);}
+}
+@-webkit-keyframes out-fade-right {
+  0%   { opacity: 1; -webkit-transform: none;}
+  100% { opacity: 0; -webkit-transform: translate3d(100%, 0, 0);}
+}
